Bug 352454 - Plasma crashes when baloo_file is not installed and the user searches for something
Summary: Plasma crashes when baloo_file is not installed and the user searches for som...
Status: RESOLVED FIXED
Alias: None
Product: Baloo
Classification: Unmaintained
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords:
: 353348 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-08 21:44 UTC by Rohan Garg
Modified: 2015-09-30 10:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rohan Garg 2015-09-08 21:44:02 UTC
When I try and search for something in krunner or kickoff, plasma always seems to crash with the following backtrace.


Thread 24 (Thread 0x98d1c330 (LWP 6212)):
#0  0xb54ed554 in __libc_do_syscall () from /lib/arm-linux-gnueabihf/libpthread.so.0
#1  0xb54e914c in pthread_cond_wait@@GLIBC_2.4 () from /lib/arm-linux-gnueabihf/libpthread.so.0
#2  0xb5625e06 in pthread_cond_wait () from /lib/arm-linux-gnueabihf/libc.so.6
#3  0xb5832af2 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#4  0xa6c46ae4 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#5  0xa6c49b12 in ?? () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#6  0xa6c460a0 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#7  0xa6c48074 in ThreadWeaver::Thread::run() () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#8  0xb5831e76 in ?? () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#9  0xb54e5f90 in start_thread () from /lib/arm-linux-gnueabihf/libpthread.so.0
#10 0xb561cefc in ?? () from /lib/arm-linux-gnueabihf/libc.so.6
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 23 (Thread 0x9951c330 (LWP 6211)):
#0  0xb54ed554 in __libc_do_syscall () from /lib/arm-linux-gnueabihf/libpthread.so.0
#1  0xb54e914c in pthread_cond_wait@@GLIBC_2.4 () from /lib/arm-linux-gnueabihf/libpthread.so.0
#2  0xb5625e06 in pthread_cond_wait () from /lib/arm-linux-gnueabihf/libc.so.6
#3  0xb5832af2 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#4  0xa6c46ae4 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#5  0xa6c49b12 in ?? () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#6  0xa6c460a0 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#7  0xa6c48074 in ThreadWeaver::Thread::run() () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#8  0xb5831e76 in ?? () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#9  0xb54e5f90 in start_thread () from /lib/arm-linux-gnueabihf/libpthread.so.0
#10 0xb561cefc in ?? () from /lib/arm-linux-gnueabihf/libc.so.6
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 22 (Thread 0x99e31330 (LWP 6210)):
#0  0xb54ed554 in __libc_do_syscall () from /lib/arm-linux-gnueabihf/libpthread.so.0
#1  0xb54e914c in pthread_cond_wait@@GLIBC_2.4 () from /lib/arm-linux-gnueabihf/libpthread.so.0
#2  0xb5625e06 in pthread_cond_wait () from /lib/arm-linux-gnueabihf/libc.so.6
#3  0xb5832af2 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#4  0xa6c46ae4 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#5  0xa6c49b12 in ?? () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#6  0xa6c460a0 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#7  0xa6c48074 in ThreadWeaver::Thread::run() () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#8  0xb5831e76 in ?? () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#9  0xb54e5f90 in start_thread () from /lib/arm-linux-gnueabihf/libpthread.so.0
#10 0xb561cefc in ?? () from /lib/arm-linux-gnueabihf/libc.so.6
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 21 (Thread 0x9a631330 (LWP 6209)):
#0  0xb54ed554 in __libc_do_syscall () from /lib/arm-linux-gnueabihf/libpthread.so.0
#1  0xb54e914c in pthread_cond_wait@@GLIBC_2.4 () from /lib/arm-linux-gnueabihf/libpthread.so.0
#2  0xb5625e06 in pthread_cond_wait () from /lib/arm-linux-gnueabihf/libc.so.6
#3  0xb5832af2 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#4  0xa6c46ae4 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#5  0xa6c49b12 in ?? () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#6  0xa6c460a0 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#7  0xa6c48074 in ThreadWeaver::Thread::run() () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#8  0xb5831e76 in ?? () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#9  0xb54e5f90 in start_thread () from /lib/arm-linux-gnueabihf/libpthread.so.0
#10 0xb561cefc in ?? () from /lib/arm-linux-gnueabihf/libc.so.6
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 20 (Thread 0x9ae31330 (LWP 6208)):
#0  0xb54ed554 in __libc_do_syscall () from /lib/arm-linux-gnueabihf/libpthread.so.0
#1  0xb54e914c in pthread_cond_wait@@GLIBC_2.4 () from /lib/arm-linux-gnueabihf/libpthread.so.0
#2  0xb5625e06 in pthread_cond_wait () from /lib/arm-linux-gnueabihf/libc.so.6
#3  0xb5832af2 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#4  0xa6c46ae4 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#5  0xa6c49b12 in ?? () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#6  0xa6c460a0 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#7  0xa6c48074 in ThreadWeaver::Thread::run() () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#8  0xb5831e76 in ?? () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#9  0xb54e5f90 in start_thread () from /lib/arm-linux-gnueabihf/libpthread.so.0
#10 0xb561cefc in ?? () from /lib/arm-linux-gnueabihf/libc.so.6
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 19 (Thread 0x9b631330 (LWP 6207)):
#0  0xb54ed554 in __libc_do_syscall () from /lib/arm-linux-gnueabihf/libpthread.so.0
#1  0xb54e914c in pthread_cond_wait@@GLIBC_2.4 () from /lib/arm-linux-gnueabihf/libpthread.so.0
#2  0xb5625e06 in pthread_cond_wait () from /lib/arm-linux-gnueabihf/libc.so.6
#3  0xb5832af2 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#4  0xa6c46ae4 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#5  0xa6c49b12 in ?? () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#6  0xa6c460a0 in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#7  0xa6c48074 in ThreadWeaver::Thread::run() () from /usr/lib/arm-linux-gnueabihf/libKF5ThreadWeaver.so.5
#8  0xb5831e76 in ?? () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#9  0xb54e5f90 in start_thread () from /lib/arm-linux-gnueabihf/libpthread.so.0
#10 0xb561cefc in ?? () from /lib/arm-linux-gnueabihf/libc.so.6
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 18 (Thread 0x9be31330 (LWP 6206)):
#0  0x9c63c9da in mdb_reader_check () from /usr/lib/arm-linux-gnueabihf/liblmdb.so.0
#1  0x9c6570c2 in Baloo::Database::open(Baloo::Database::OpenMode) () from /usr/lib/arm-linux-gnueabihf/libKF5BalooEngine.so.5
#2  0xb58657b0 in QListData::detach_grow(int*, int) () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#3  0x9be30b20 in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 17 (Thread 0x9c631330 (LWP 6205)):
#0  0xb55a18e6 in ?? () from /lib/arm-linux-gnueabihf/libc.so.6
#1  0xb56124b2 in __xstat64 () from /lib/arm-linux-gnueabihf/libc.so.6
#2  0xb5918fc2 in ?? () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#3  0xb58d0cda in QFileInfo::exists(QString const&) () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#4  0xb64efcda in ?? () from /usr/lib/arm-linux-gnueabihf/libKF5IconThemes.so.5
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 15 (Thread 0x9e0ff330 (LWP 6203)):
#0  0xb54ed554 in __libc_do_syscall () from /lib/arm-linux-gnueabihf/libpthread.so.0
#1  0xb54e914c in pthread_cond_wait@@GLIBC_2.4 () from /lib/arm-linux-gnueabihf/libpthread.so.0
#2  0xb5625e06 in pthread_cond_wait () from /lib/arm-linux-gnueabihf/libc.so.6
#3  0xb5832af2 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#4  0xb69add3c in ?? () from /usr/lib/arm-linux-gnueabihf/libQt5Quick.so.5
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 14 (Thread 0xb27ac330 (LWP 6152)):
#0  0xb54ed554 in __libc_do_syscall () from /lib/arm-linux-gnueabihf/libpthread.so.0
#1  0xb54e914c in pthread_cond_wait@@GLIBC_2.4 () from /lib/arm-linux-gnueabihf/libpthread.so.0
#2  0xb5625e06 in pthread_cond_wait () from /lib/arm-linux-gnueabihf/libc.so.6
#3  0xb51134c4 in _mali_osu_lock_wait () from /usr/lib/arm-linux-gnueabihf/libGLESv2.so.2
#4  0xb51129ec in ?? () from /usr/lib/arm-linux-gnueabihf/libGLESv2.so.2
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 13 (Thread 0xb1fac330 (LWP 6153)):
#0  0xb5617f14 in ioctl () from /lib/arm-linux-gnueabihf/libc.so.6
#1  0xb5113b30 in ?? () from /usr/lib/arm-linux-gnueabihf/libGLESv2.so.2
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 12 (Thread 0xb17ac330 (LWP 6155)):
#0  0xb56166e0 in poll () from /lib/arm-linux-gnueabihf/libc.so.6
#1  0xb56166da in poll () from /lib/arm-linux-gnueabihf/libc.so.6
#2  0x00000004 in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 11 (Thread 0xb0242330 (LWP 6161)):
#0  0xb56166e0 in poll () from /lib/arm-linux-gnueabihf/libc.so.6
#1  0xb56166da in poll () from /lib/arm-linux-gnueabihf/libc.so.6
#2  0x7ffffffe in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 10 (Thread 0xadcd0330 (LWP 6163)):
#0  0xb56166e0 in poll () from /lib/arm-linux-gnueabihf/libc.so.6
#1  0xb56166da in poll () from /lib/arm-linux-gnueabihf/libc.so.6
#2  0x7ffffffe in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 9 (Thread 0xacaad330 (LWP 6164)):
#0  0xb56185d2 in select () from /lib/arm-linux-gnueabihf/libc.so.6
#1  0xb56185cc in select () from /lib/arm-linux-gnueabihf/libc.so.6
#2  0x00002000 in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 8 (Thread 0xabfea330 (LWP 6169)):
#0  0xb56166e0 in poll () from /lib/arm-linux-gnueabihf/libc.so.6
#1  0xb56166da in poll () from /lib/arm-linux-gnueabihf/libc.so.6
#2  0x7ffffffe in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 7 (Thread 0xaadff330 (LWP 6170)):
#0  0xb54ed554 in __libc_do_syscall () from /lib/arm-linux-gnueabihf/libpthread.so.0
#1  0xb54e914c in pthread_cond_wait@@GLIBC_2.4 () from /lib/arm-linux-gnueabihf/libpthread.so.0
#2  0xb5625e06 in pthread_cond_wait () from /lib/arm-linux-gnueabihf/libc.so.6
#3  0xb6ed51fa in ?? () from /usr/lib/arm-linux-gnueabihf/libQt5Script.so.5
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 6 (Thread 0xa9db8330 (LWP 6171)):
#0  0xb56166e0 in poll () from /lib/arm-linux-gnueabihf/libc.so.6
#1  0xb56166da in poll () from /lib/arm-linux-gnueabihf/libc.so.6
#2  0x7ffffffe in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 5 (Thread 0xa8c15330 (LWP 6173)):
#0  0xb54ed554 in __libc_do_syscall () from /lib/arm-linux-gnueabihf/libpthread.so.0
#1  0xb54e914c in pthread_cond_wait@@GLIBC_2.4 () from /lib/arm-linux-gnueabihf/libpthread.so.0
#2  0xb5625e06 in pthread_cond_wait () from /lib/arm-linux-gnueabihf/libc.so.6
#3  0xb5832af2 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#4  0xb69add3c in ?? () from /usr/lib/arm-linux-gnueabihf/libQt5Quick.so.5
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 4 (Thread 0xa0927330 (LWP 6177)):
#0  0xb56166e0 in poll () from /lib/arm-linux-gnueabihf/libc.so.6
#1  0xb56166da in poll () from /lib/arm-linux-gnueabihf/libc.so.6
#2  0x7ffffffe in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 3 (Thread 0x9fdff330 (LWP 6178)):
#0  0xb54ed554 in __libc_do_syscall () from /lib/arm-linux-gnueabihf/libpthread.so.0
#1  0xb54e914c in pthread_cond_wait@@GLIBC_2.4 () from /lib/arm-linux-gnueabihf/libpthread.so.0
#2  0xb5625e06 in pthread_cond_wait () from /lib/arm-linux-gnueabihf/libc.so.6
#3  0xb5832af2 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#4  0xb69add3c in ?? () from /usr/lib/arm-linux-gnueabihf/libQt5Quick.so.5
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 2 (Thread 0x9e8ff330 (LWP 6179)):
#0  0xb54ed554 in __libc_do_syscall () from /lib/arm-linux-gnueabihf/libpthread.so.0
#1  0xb54e93c4 in pthread_cond_timedwait@@GLIBC_2.4 () from /lib/arm-linux-gnueabihf/libpthread.so.0
#2  0xb5625e3a in pthread_cond_timedwait () from /lib/arm-linux-gnueabihf/libc.so.6
#3  0xb5832a86 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#4  0xb582feb8 in ?? () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#5  0xb5831e76 in ?? () from /usr/lib/arm-linux-gnueabihf/libQt5Core.so.5
#6  0xb54e5f90 in start_thread () from /lib/arm-linux-gnueabihf/libpthread.so.0
#7  0xb561cefc in ?? () from /lib/arm-linux-gnueabihf/libc.so.6
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 1 (Thread 0xb2b25240 (LWP 6148)):
#0  0xb54ed554 in __libc_do_syscall () from /lib/arm-linux-gnueabihf/libpthread.so.0
#1  0xb54e914c in pthread_cond_wait@@GLIBC_2.4 () from /lib/arm-linux-gnueabihf/libpthread.so.0
#2  0xb5625e06 in pthread_cond_wait () from /lib/arm-linux-gnueabihf/libc.so.6
#3  0xb6bb963a in ?? () from /usr/lib/arm-linux-gnueabihf/libxcb.so.1
Backtrace stopped: previous frame identical to this frame (corrupt stack?)
Continuing.
[Thread 0x9e8ff330 (LWP 6179) exited]

Program received signal SIGSTOP, Stopped (signal).
[Switching to Thread 0xb2b25240 (LWP 6148)]
0xb56166e2 in poll () from /lib/arm-linux-gnueabihf/libc.so.6
Continuing.
[Thread 0xacaad330 (LWP 6164) exited]

Program received signal SIGSTOP, Stopped (signal).
[Switching to Thread 0xaadff330 (LWP 6170)]
0xb54ed554 in __libc_do_syscall () from /lib/arm-linux-gnueabihf/libpthread.so.0
quit
Detaching from program: /usr/bin/plasmashell, process 6148

Reproducible: Always

Steps to Reproduce:
1. Remove the package that provides baloofile
2. Disable indexing
3. Try and search for some application

Actual Results:  
Plasma crashes

Expected Results:  
Plasma does not crash
Comment 1 Rohan Garg 2015-09-08 21:45:54 UTC
Ah right, you should probably also make sure that you don't have a db cache of any sorts with baloo, so the best way to test it would be with a new user probably.
Comment 2 Rohan Garg 2015-09-16 00:41:06 UTC
Git commit 3312d6f3f4b80ec04e86c2ea103adc51ade0f020 by Rohan Garg.
Committed on 15/09/2015 at 23:20.
Pushed by garg into branch 'master'.

Add error checking in various bits so that Baloo doesn't crash when disabled.

REVIEW: 125241

M  +13   -3    src/engine/database.cpp
M  +1    -1    src/lib/searchstore.cpp

http://commits.kde.org/baloo/3312d6f3f4b80ec04e86c2ea103adc51ade0f020
Comment 3 David Edmundson 2015-09-30 10:55:18 UTC
*** Bug 353348 has been marked as a duplicate of this bug. ***