Add error checking in various bits so that Baloo doesn't crash when disabled.

REVIEW: 125241
BUG: 352454